force-app/main/default/objects/Contact/fields/Date_Modified_sub_moments_with_you__c.field-meta.xml
<CustomField>
    <fullName>Date_Modified_sub_moments_with_you__c</fullName>
    <description>Date and time subscription was modified</description>
    <label>Date Modified sub_moments_with_you</label>
    <type>DateTime</type>
</CustomField>