force-app/main/default/objects/Contact/fields/DD_AccountID_Five9__c.field-meta.xml
<CustomField>
    <fullName>DD_AccountID_Five9__c</fullName>
    <inlineHelpText>DD id from Five9 data</inlineHelpText>
    <label>DD AccountID (Five9)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>