force-app/main/default/objects/Contact/fields/DD_Family_ID__c.field-meta.xml
<CustomField>
    <fullName>DD_Family_ID__c</fullName>
    <formula>Account.DD_Family_ID__c</formula>
    <label>DD/SE Family ID</label>
    <type>Text</type>
</CustomField>