force-app/main/default/objects/Contact/fields/DD_Individual_ID__c.field-meta.xml
<CustomField>
    <fullName>DD_Individual_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID from DonorDirect.</inlineHelpText>
    <label>DD/SE Individual ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>