force-app/main/default/objects/Contact/fields/DD_UserID__c.field-meta.xml
<CustomField>
    <fullName>DD_UserID__c</fullName>
    <description>FOR FUTURE INTEGRATION USE. CORRELATES FL USERS TO ASSIGNMENTS SUCH AS EVENT AREA CODE, etc.</description>
    <inlineHelpText>Donor Direct ID for the FamilyLife user</inlineHelpText>
    <label>DD_UserID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>