force-app/main/default/objects/Contact/fields/Dev_Manager_MOP_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Dev_Manager_MOP_Review_Date__c</fullName>
    <description>Used by Development</description>
    <label>Dev Manager MOP Review Date</label>
    <type>Date</type>
</CustomField>