force-app/main/default/objects/Contact/fields/Dev_Manager_MOP_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Dev_Manager_MOP_Review_Notes__c</fullName>
    <description>Used by Developmen</description>
    <label>Dev Manager MOP Review Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>