force-app/main/default/objects/Contact/fields/Diversity_of_Giving_Experiences__c.field-meta.xml
<CustomField>
    <fullName>Diversity_of_Giving_Experiences__c</fullName>
    <description>Used by Development</description>
    <label>Diversity of Giving Experiences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>