force-app/main/default/objects/Contact/fields/Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call__c</fullName>
    <formula>Account.Do_Not_Call__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do Not Call - Account</label>
    <type>Checkbox</type>
</CustomField>