force-app/main/default/objects/Contact/fields/Do_Not_Text__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Contact has requested that FamilyLife *not* Text them (SMS Messages)</description>
    <inlineHelpText>When checked, the Contact has requested that FamilyLife *not* Text them (SMS Messages)</inlineHelpText>
    <label>Do Not Text</label>
    <type>Checkbox</type>
</CustomField>