force-app/main/default/objects/Contact/fields/Donor_Active_Mail_Merge_Lists__c.field-meta.xml
<CustomField>
    <fullName>Donor_Active_Mail_Merge_Lists__c</fullName>
    <formula>IF( ISPICKVAl(Account.Donor_Conf_Certs__c, &quot;Active&quot;), &quot;Conf Certs,&quot;, &apos;&apos;) &amp; 
IF( ISPICKVAl(Account.Donor_Letter_1__c, &quot;Active&quot;), &quot; Fund Appeal,&quot;,  &apos;&apos;) &amp; 
IF( ISPICKVAl(Account.Donor_Fund_Events__c , &quot;Active&quot;), &quot; Fund Events,&quot;,  &apos;&apos;) &amp; 
IF( ISPICKVAl(Account.Donor_Gifts__c, &quot;Active&quot;), &quot; Gifts,&quot;,  &apos;&apos;) &amp; 
IF( ISPICKVAl(Account.Donor_Info_Mail_Update__c, &quot;Active&quot;), &quot; Info Mail Update,&quot;,  &apos;&apos;) &amp; 
IF( ISPICKVAl(Account.Donor_Ministry_Reports__c , &quot;Active&quot;), &quot; Ministry Reports,&quot;,  &apos;&apos;)</formula>
    <label>Donor Active Mail Merge Lists</label>
    <type>Text</type>
</CustomField>