force-app/main/default/objects/Contact/fields/Donor_Caseload__c.field-meta.xml
<CustomField>
    <fullName>Donor_Caseload__c</fullName>
    <formula>Account.Donor_Caseload_Lookup__r.Name</formula>
    <inlineHelpText>RED LIGHT - Do not proceed without contacting Donor Rep
YELLOW LIGHT - Attempt to contact Donor Rep and give two business days for response then proceed</inlineHelpText>
    <label>Donor Caseload</label>
    <type>Text</type>
</CustomField>