force-app/main/default/objects/Contact/fields/Donor_Caseload_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Donor_Caseload_Email_Address__c</fullName>
    <formula>Account.Donor_Caseload_Lookup__r.Donor_Rep_Email__c</formula>
    <label>Donor Caseload Email Address</label>
    <type>Text</type>
</CustomField>