force-app/main/default/objects/Contact/fields/Donor_Classication__c.field-meta.xml
<CustomField>
    <fullName>Donor_Classication__c</fullName>
    <formula>TEXT(Account.Donor_Classification_Level__c)</formula>
    <inlineHelpText>From the Account record</inlineHelpText>
    <label>Donor Classification</label>
    <type>Text</type>
</CustomField>