force-app/main/default/objects/Contact/fields/Donor_Conf_Certs_Contact__c.field-meta.xml
<CustomField>
    <fullName>Donor_Conf_Certs_Contact__c</fullName>
    <formula>Text( Account.Donor_Conf_Certs__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Conf Certs</label>
    <type>Text</type>
</CustomField>