force-app/main/default/objects/Contact/fields/Donor_Confidential_Notes__c.field-meta.xml
<CustomField>
    <fullName>Donor_Confidential_Notes__c</fullName>
    <inlineHelpText>Donor team confidential notes about the Contact</inlineHelpText>
    <label>Donor Confidential Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>