force-app/main/default/objects/Contact/fields/Donor_Fund_Events_Contact__c.field-meta.xml
<CustomField>
    <fullName>Donor_Fund_Events_Contact__c</fullName>
    <formula>Text( Account.Donor_Fund_Events__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Fund Events</label>
    <type>Text</type>
</CustomField>