force-app/main/default/objects/Contact/fields/Donor_Gifts_Contact__c.field-meta.xml
<CustomField>
    <fullName>Donor_Gifts_Contact__c</fullName>
    <formula>Text( Account.Donor_Gifts__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Gifts</label>
    <type>Text</type>
</CustomField>