force-app/main/default/objects/Contact/fields/Donor_Info_Mail_Update_Contact__c.field-meta.xml
<CustomField>
    <fullName>Donor_Info_Mail_Update_Contact__c</fullName>
    <formula>Text( Account.Donor_Info_Mail_Update__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Info Mail Update</label>
    <type>Text</type>
</CustomField>