force-app/main/default/objects/Contact/fields/Donor_Lead_Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>Donor_Lead_Rep_Code__c</fullName>
    <label>Donor Lead Rep Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>