force-app/main/default/objects/Contact/fields/Donor_Letter_1_Contact__c.field-meta.xml
<CustomField>
    <fullName>Donor_Letter_1_Contact__c</fullName>
    <formula>Text( Account.Donor_Letter_1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Letter 1</label>
    <type>Text</type>
</CustomField>