force-app/main/default/objects/Contact/fields/Donor_Ministry_Reports_Contact__c.field-meta.xml
<CustomField>
    <fullName>Donor_Ministry_Reports_Contact__c</fullName>
    <formula>Text( Account.Donor_Ministry_Reports__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Ministry Reports</label>
    <type>Text</type>
</CustomField>