force-app/main/default/objects/Contact/fields/Dynamics_DD_ID__c.field-meta.xml
<CustomField>
    <fullName>Dynamics_DD_ID__c</fullName>
    <inlineHelpText>For Dynamics migration only. Donor Direct ID from Dynamics. Will be used to dedupe at a later date.</inlineHelpText>
    <label>Dynamics DD ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>