force-app/main/default/objects/Contact/fields/EDI_ByPassValidation__c.field-meta.xml
<CustomField>
    <fullName>EDI_ByPassValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not visible field needed to perform background processes by Master Data Sync</description>
    <label>EDI By Pass Validation</label>
    <type>Checkbox</type>
</CustomField>