force-app/main/default/objects/Contact/fields/Email_Combined__c.field-meta.xml
<CustomField>
    <fullName>Email_Combined__c</fullName>
    <description>Combined formula for Email, email_other__c, and private_email__c</description>
    <formula>Email + &quot; &quot; +
Email_Other__c + &quot; &quot; +
Private_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Combined</label>
    <type>Text</type>
</CustomField>