force-app/main/default/objects/Contact/fields/Email_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Last_Modified_Date__c</fullName>
    <label>Preferred Email Last Modified Date</label>
    <type>DateTime</type>
</CustomField>