force-app/main/default/objects/Contact/fields/Email_Other__c.field-meta.xml
<CustomField>
    <fullName>Email_Other__c</fullName>
    <label>Email (Other)</label>
    <type>Email</type>
</CustomField>