force-app/main/default/objects/Contact/fields/Email_Other_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Other_Type__c</fullName>
    <label>Email (Other) Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Spouse Home</fullName>
            </value>
            <value>
                <fullName>Spouse Work</fullName>
            </value>
            <value>
                <fullName>Spouse Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>