force-app/main/default/objects/Contact/fields/Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Name__c</fullName>
    <formula>IF( Nickname__c = &quot;&quot;,  FirstName , Nickname__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Template Name</label>
    <type>Text</type>
</CustomField>