force-app/main/default/objects/Contact/fields/FA_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>FA_Contact_Number__c</fullName>
    <label>FA Contact Number</label>
    <type>TextArea</type>
</CustomField>