force-app/main/default/objects/Contact/fields/Facebook_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Profile_ID__c</fullName>
    <description>Contact&apos;s Facebook Profile Page</description>
    <inlineHelpText>Enter the complete URL to a person&apos;s Facebook page.  To locate a URL, search for the person on Facebook.  Once their profile page appears, click About &gt; Contacts and Basic Info. Under &quot;Contact Information&quot;, copy &amp; paste the Facebook URL into this field.</inlineHelpText>
    <label>Facebook Profile ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>