force-app/main/default/objects/Contact/fields/Form_Url__c.field-meta.xml
<CustomField>
    <fullName>Form_Url__c</fullName>
    <label>Form Url</label>
    <type>Url</type>
</CustomField>