force-app/main/default/objects/Contact/fields/Functional_Role__c.field-meta.xml
<CustomField>
    <fullName>Functional_Role__c</fullName>
    <inlineHelpText>Select the role that most represents this person&apos;s role in the organization.</inlineHelpText>
    <label>Functional Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounts Payable</fullName>
            </value>
            <value>
                <fullName>Catering Manager</fullName>
            </value>
            <value>
                <fullName>Catering Sales Manager</fullName>
            </value>
            <value>
                <fullName>Church Leader</fullName>
            </value>
            <value>
                <fullName>Church Staff - Non-Pastoral</fullName>
            </value>
            <value>
                <fullName>Convention Servicing Manager</fullName>
            </value>
            <value>
                <fullName>Director of Marketing</fullName>
            </value>
            <value>
                <fullName>Director of Sales</fullName>
            </value>
            <value>
                <fullName>Events Organizer</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pastor / Rev / Minister / Father</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Station Manager</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>