force-app/main/default/objects/Contact/fields/GC_Recruiting_and_Coaching_Info_from_web__c.field-meta.xml
<CustomField>
    <fullName>GC_Recruiting_and_Coaching_Info_from_web__c</fullName>
    <description>This LOCKED  field is used to capture Volunteer input from their efforts in making GC recruiting and coaching calls.   The field is only available for text capture and to be mapped to SE so that this information can be brought forth onto the Phone Bank report in the future.</description>
    <inlineHelpText>This LOCKED  field is used to capture Volunteer input from their efforts in making GC recruiting and coaching calls.   The field is only available for text capture and to be mapped to SE so that this information can be brought forth onto the Phone Bank re</inlineHelpText>
    <label>GC Recruiting and Coaching Info from web</label>
    <type>TextArea</type>
</CustomField>