force-app/main/default/objects/Contact/fields/General_File_Lift_Program__c.field-meta.xml
<CustomField>
    <fullName>General_File_Lift_Program__c</fullName>
    <formula>Account.General_File_Lift_Program__c</formula>
    <inlineHelpText>Reflected from Household record</inlineHelpText>
    <label>General File Lift Program</label>
    <type>Checkbox</type>
</CustomField>