force-app/main/default/objects/Contact/fields/Giving_First__c.field-meta.xml
<CustomField>
    <fullName>Giving_First__c</fullName>
    <formula>Account.Giving_First__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Giving First</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>