force-app/main/default/objects/Contact/fields/Giving_First_Date__c.field-meta.xml
<CustomField>
    <fullName>Giving_First_Date__c</fullName>
    <formula>Account.Giving_First_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Giving First Date</label>
    <type>Date</type>
</CustomField>