force-app/main/default/objects/Contact/fields/Global_Staff_Classification__c.field-meta.xml
<CustomField>
    <fullName>Global_Staff_Classification__c</fullName>
    <description>Cru/FamilyLife Staff Classification for people serving in a Global Role.</description>
    <label>Global Staff Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>CCC Staff - FamilyLife IS their primary responsibility</fullName>
            </value>
            <value>
                <fullName>CCC Staff - FamilyLife is NOT their primary responsibility</fullName>
            </value>
            <value>
                <fullName>CCC Staff - Other (e.g. Affiliate, Part Time Staff, etc.)</fullName>
            </value>
            <value>
                <fullName>FamilyLife Volunteer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>