force-app/main/default/objects/Contact/fields/Global_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Global_Time_Zone__c</fullName>
    <inlineHelpText>Two-Character Country Code followed by Country Name/City followed by Time Offset from UTC/GMT time.  The characters &quot;UTC&quot; with no specified time offset = GMT.</inlineHelpText>
    <label>Global Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AD  Europe/Andorra UTC +01:00</fullName>
            </value>
            <value>
                <fullName>AE  Asia/Dubai UTC +04:00</fullName>
            </value>
            <value>
                <fullName>AF  Asia/Kabul UTC +04:30</fullName>
            </value>
            <value>
                <fullName>AG  America/Antigua UTC -04:00</fullName>
            </value>
            <value>
                <fullName>AI  America/Anguilla UTC -04:00</fullName>
            </value>
            <value>
                <fullName>AL  Europe/Tirane UTC +01:00</fullName>
            </value>
            <value>
                <fullName>AM  Asia/Yerevan UTC +04:00</fullName>
            </value>
            <value>
                <fullName>AO  Africa/Luanda UTC +01:00</fullName>
            </value>
            <value>
                <fullName>AQ  Antarctica/Casey UTC +08:00</fullName>
            </value>
            <value>
                <fullName>AQ  Antarctica/Davis UTC +07:00</fullName>
            </value>
            <value>
                <fullName>AQ  Antarctica/DumontDUrville UTC +10:00</fullName>
            </value>
            <value>
                <fullName>AQ  Antarctica/Mawson UTC +05:00</fullName>
            </value>
            <value>
                <fullName>AQ  Antarctica/McMurdo UTC +13:00</fullName>
            </value>
            <value>
                <fullName>AQ  Antarctica/Palmer UTC -03:00</fullName>
            </value>
            <value>
                <fullName>AQ  Antarctica/Rothera UTC -03:00</fullName>
            </value>
            <value>
                <fullName>AQ  Antarctica/Syowa UTC +03:00</fullName>
            </value>
            <value>
                <fullName>AQ  Antarctica/Troll UTC</fullName>
            </value>
            <value>
                <fullName>AQ  Antarctica/Vostok UTC +06:00</fullName>
            </value>
            <value>
                <fullName>AR  America/Argentina/Buenos_Aires UTC -03:00</fullName>
            </value>
            <value>
                <fullName>AR  America/Argentina/Catamarca UTC -03:00</fullName>
            </value>
            <value>
                <fullName>AR  America/Argentina/Cordoba UTC -03:00</fullName>
            </value>
            <value>
                <fullName>AR  America/Argentina/Jujuy UTC -03:00</fullName>
            </value>
            <value>
                <fullName>AR  America/Argentina/La_Rioja UTC -03:00</fullName>
            </value>
            <value>
                <fullName>AR  America/Argentina/Mendoza UTC -03:00</fullName>
            </value>
            <value>
                <fullName>AR  America/Argentina/Rio_Gallegos UTC -03:00</fullName>
            </value>
            <value>
                <fullName>AR  America/Argentina/Salta UTC -03:00</fullName>
            </value>
            <value>
                <fullName>AR  America/Argentina/San_Juan UTC -03:00</fullName>
            </value>
            <value>
                <fullName>AR  America/Argentina/San_Luis UTC -03:00</fullName>
            </value>
            <value>
                <fullName>AR  America/Argentina/Tucuman UTC -03:00</fullName>
            </value>
            <value>
                <fullName>AR  America/Argentina/Ushuaia UTC -03:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>