force-app/main/default/objects/Contact/fields/Global_Training__c.field-meta.xml
<CustomField>
    <fullName>Global_Training__c</fullName>
    <inlineHelpText>Please choose all the training that applies to this Contact</inlineHelpText>
    <label>Global Training</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HB Small Group Leader Train the Trainer</fullName>
            </value>
            <value>
                <fullName>HB Small Group Leader Training</fullName>
            </value>
            <value>
                <fullName>Leadership Team training - Advanced</fullName>
            </value>
            <value>
                <fullName>Leadership Team training - Follow-up/Ref</fullName>
            </value>
            <value>
                <fullName>Leadership Team training - Initial Basic</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Training - Describe</fullName>
            </value>
            <value>
                <fullName>Speaker, Advanced</fullName>
            </value>
            <value>
                <fullName>Speaker, Basic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>