force-app/main/default/objects/Contact/fields/Global_Training_Notes__c.field-meta.xml
<CustomField>
    <fullName>Global_Training_Notes__c</fullName>
    <inlineHelpText>Use this area to log information pertaining to their training history such as dates of specific training or information as to why their training is out of usual order.</inlineHelpText>
    <label>Global Training Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>