force-app/main/default/objects/Contact/fields/GMID__c.field-meta.xml
<CustomField>
    <fullName>GMID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>For data migration purposes. Goldmine GUID.</inlineHelpText>
    <label>GMID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>