force-app/main/default/objects/Contact/fields/Google_Hangouts__c.field-meta.xml
<CustomField>
    <fullName>Google_Hangouts__c</fullName>
    <description>Global Dept Requested:  The contact&apos;s google  hangouts ID.</description>
    <label>Google  Hangouts</label>
    <type>TextArea</type>
</CustomField>