force-app/main/default/objects/Contact/fields/Google_Meet_ID__c.field-meta.xml
<CustomField>
    <fullName>Google_Meet_ID__c</fullName>
    <description>Global Dept Requested:  The contact&apos;s Google Meet ID</description>
    <label>Google Meet ID</label>
    <type>TextArea</type>
</CustomField>