force-app/main/default/objects/Contact/fields/GR_ID__c.field-meta.xml
<CustomField>
    <fullName>GR_ID__c</fullName>
    <label>GR ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>