force-app/main/default/objects/Contact/fields/GR_Updated__c.field-meta.xml
<CustomField>
    <fullName>GR_Updated__c</fullName>
    <label>GR Updated</label>
    <type>DateTime</type>
</CustomField>