force-app/main/default/objects/Contact/fields/GroupName_Moved_to_CM__c.field-meta.xml
<CustomField>
    <fullName>GroupName_Moved_to_CM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GroupName Moved to CM</label>
    <type>Checkbox</type>
</CustomField>