force-app/main/default/objects/Contact/fields/Guide_Tier__c.field-meta.xml
<CustomField>
    <fullName>Guide_Tier__c</fullName>
    <label>Guide Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
                <default>true</default>
                <label>Consumer</label>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Guide</fullName>
            </value>
            <value>
                <fullName>Multiplying Guide</fullName>
            </value>
            <value>
                <fullName>Movement Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>