force-app/main/default/objects/Contact/fields/Guides__c.field-meta.xml
<CustomField>
    <fullName>Guides__c</fullName>
    <inlineHelpText>Group Leaders - those who lead small groups
Network Leaders - those who lead a group of group leaders
Movement Leaders - those who a self-sustained, larger scope (i.e. a city) working with multiple networks of disciple makers</inlineHelpText>
    <label>Guides</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spiritual Multiplier</fullName>
                <color>#FFFF66</color>
                <label>Spiritual Multiplier</label>
            </value>
            <value>
                <fullName>Network Leader</fullName>
                <color>#FFCC66</color>
                <label>Network Leader</label>
            </value>
            <value>
                <fullName>Movement Leader</fullName>
                <color>#FFCC33</color>
                <label>Movement Leader</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>