force-app/main/default/objects/Contact/fields/HHLD_Lift_Opportunity_Count__c.field-meta.xml
<CustomField>
    <fullName>HHLD_Lift_Opportunity_Count__c</fullName>
    <description>Number of Lift Opportunities associated with the Household</description>
    <formula>Account.Lift_Opportunity_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Lift Opportunities associated with the Household</inlineHelpText>
    <label>HHLD Lift Opportunity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>