force-app/main/default/objects/Contact/fields/HHLD_Total_Development_Opty_Count__c.field-meta.xml
<CustomField>
    <fullName>HHLD_Total_Development_Opty_Count__c</fullName>
    <description>Total Development Opportunities associated with the Household</description>
    <formula>Account.Total_Development_Opty_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Development Opportunities associated with the Household</inlineHelpText>
    <label>HHLD Total Development Opty Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>