force-app/main/default/objects/Contact/fields/His_and_Her_Salutation__c.field-meta.xml
<CustomField>
    <fullName>His_and_Her_Salutation__c</fullName>
    <formula>Account.Site</formula>
    <label>His and Her Salutation</label>
    <type>Text</type>
</CustomField>