force-app/main/default/objects/Contact/fields/HomeBuilder_Type__c.field-meta.xml
<CustomField>
    <fullName>HomeBuilder_Type__c</fullName>
    <inlineHelpText>Select all Home Builder Types that relate to this Contact.</inlineHelpText>
    <label>HomeBuilder Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>Host</fullName>
            </value>
            <value>
                <fullName>Mentor</fullName>
            </value>
            <value>
                <fullName>Exceptional Group Coordinator/Leader</fullName>
            </value>
            <value>
                <fullName>Exceptional Volunteer</fullName>
            </value>
            <value>
                <fullName>Influencer - High Level (1000+)</fullName>
            </value>
            <value>
                <fullName>Influencer - Mid Level (500-999)</fullName>
            </value>
            <value>
                <fullName>Influencer - Low Level (&lt;500)</fullName>
            </value>
            <value>
                <fullName>Influencer - Strategic Alliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>