force-app/main/default/objects/Contact/fields/How_Do_You_See_Yourself_Finishing_Well__c.field-meta.xml
<CustomField>
    <fullName>How_Do_You_See_Yourself_Finishing_Well__c</fullName>
    <description>Used by Development</description>
    <label>How Do You See Yourself Finishing Well</label>
    <type>TextArea</type>
</CustomField>