force-app/main/default/objects/Contact/fields/How_FL_Vision_Aligns_with_Giving_Passion__c.field-meta.xml
<CustomField>
    <fullName>How_FL_Vision_Aligns_with_Giving_Passion__c</fullName>
    <inlineHelpText>Used by Development</inlineHelpText>
    <label>How FL Vision Aligns with Giving Passion</label>
    <type>TextArea</type>
</CustomField>