force-app/main/default/objects/Contact/fields/How_has_FL_Impacted_Marriage__c.field-meta.xml
<CustomField>
    <fullName>How_has_FL_Impacted_Marriage__c</fullName>
    <description>Used by Development</description>
    <label>How has FL Impacted Marriage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>