force-app/main/default/objects/Contact/fields/ICP_Tier__c.field-meta.xml
<CustomField>
    <fullName>ICP_Tier__c</fullName>
    <inlineHelpText>Where does this contact fit in the ideal customer profile?</inlineHelpText>
    <label>ICP Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Married with Kids</fullName>
            </value>
            <value>
                <fullName>Married without Kids</fullName>
            </value>
            <value>
                <fullName>Single with Kids</fullName>
            </value>
            <value>
                <fullName>Single without Kids</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>