force-app/main/default/objects/Contact/fields/Interest_in_Stewardship_Strategies__c.field-meta.xml
<CustomField>
    <fullName>Interest_in_Stewardship_Strategies__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Development</description>
    <label>Interest in Stewardship Strategies</label>
    <type>Checkbox</type>
</CustomField>