force-app/main/default/objects/Contact/fields/Interviewing_Rep__c.field-meta.xml
<CustomField>
    <fullName>Interviewing_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This HIDDEN field stores the id of the Rep who conducted the pastor interview.</description>
    <label>Interviewing Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>