force-app/main/default/objects/Contact/fields/Investment_Advisor_CPA_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Investment_Advisor_CPA_Involvement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Development</description>
    <inlineHelpText>Check box if the Donor has an investment Advisor and/or CPA involved in their giving</inlineHelpText>
    <label>Investment Advisor/CPA Involvement</label>
    <type>Checkbox</type>
</CustomField>