force-app/main/default/objects/Contact/fields/Is_Active_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Volunteer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Based on criteria, checked if Contact is an active Event volunteer</description>
    <inlineHelpText>Is Contact an Active Event or Local Leader Volunteer?</inlineHelpText>
    <label>Is Active Volunteer</label>
    <type>Checkbox</type>
</CustomField>