force-app/main/default/objects/Contact/fields/Is_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Is_Attendee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Attendee</label>
    <type>Checkbox</type>
</CustomField>