force-app/main/default/objects/Contact/fields/Is_Church_Staff_Member_or_Pastor__c.field-meta.xml
<CustomField>
    <fullName>Is_Church_Staff_Member_or_Pastor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Church Staff Member or Pastor</label>
    <type>Checkbox</type>
</CustomField>